--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -191,11 +191,11 @@ const { Content } = await tab.render()
   </div>
 
   {
-    data.videoIDs && data.videoIDs.length > 0 && (
+    data.videos && data.videos.length > 0 && (
       <>
         <h2>Useful Videos</h2>
         <UsefulVideos
-          videoIDs={data.videoIDs}
+          videos={data.videos}
           searchQuery={`${data.title} ${data.artist}`}
         />
       </>
