--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import SpeedInsights from '@vercel/speed-insights/astro'
 import '@fontsource-variable/inter'
 import { twMerge } from 'tailwind-merge'
 
@@ -31,3 +32,5 @@ const { title, description } = Astro.props
     <slot />
   </body>
 </html>
+
+<SpeedInsights />
