--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,8 +3,7 @@ import SpeedInsights from '@vercel/speed-insights/astro'
 import '@fontsource-variable/inter'
 import { twMerge } from 'tailwind-merge'
 
-// TODO switch to type
-interface Props {
+type Props = {
   title: string
   description: string
 }
