remove redundant alt descriptions

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -84,7 +84,7 @@ const { Content } = await tab.render()
         data.albumImageURL && (
           <Image
             src={data.albumImageURL}
-            alt={`${data.album} Album Cover`}
+            alt=""
             class="relative h-44 w-44 rounded-[inherit]"
           />
         )
