--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,7 +69,7 @@ const tabGroups = toTabGroups(tabs)
                 {group.artist.imageURL && (
                   <Image
                     src={group.artist.imageURL}
-                    alt={`${group.artist.name} Profile Image`}
+                    alt=""
                     class="relative h-12 w-12 rounded-[inherit] object-cover"
                   />
                 )}
@@ -105,7 +105,7 @@ const tabGroups = toTabGroups(tabs)
                       {tab.data.albumImageURL && (
                         <Image
                           src={tab.data.albumImageURL}
-                          alt={`${tab.data.album} Album Cover`}
+                          alt=""
                           class="relative h-10 w-10 rounded-[inherit] object-cover"
                         />
                       )}
