use semantic tags, scope md content styling

--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -30,7 +30,7 @@ const { Content } = await tab.render()
   title={`${data.title} - Tino's Tabs`}
   description={`Learn how to play ${data.title} by ${data.artist}.`}
 >
-  <div class="-mx-5 -mt-10 flex items-center justify-between px-5 pt-5">
+  <nav class="-mx-5 -mt-10 flex items-center justify-between px-5 pt-5">
     <a
       href="/"
       class={twMerge(
@@ -64,9 +64,9 @@ const { Content } = await tab.render()
         </a>
       )
     }
-  </div>
+  </nav>
 
-  <div class="my-8 flex flex-col items-center">
+  <header class="my-8 flex flex-col items-center">
     <div
       class={twMerge(
         'mb-4 relative h-44 w-44 rounded-md bg-stone-50 shadow-2xl flex items-center justify-center',
@@ -208,65 +208,73 @@ const { Content } = await tab.render()
         </span>
       </a>
     </div>
-  </div>
+  </header>
 
-  {
-    data.videos && data.videos.length > 0 && (
-      <>
-        <h2>Useful Videos</h2>
-        <UsefulVideos
-          videos={data.videos}
-          searchQuery={`${data.title} ${data.artist}`}
-        />
-      </>
-    )
-  }
+  <main>
+    {
+      data.videos && data.videos.length > 0 && (
+        <>
+          <h2>Useful Videos</h2>
+          <UsefulVideos
+            videos={data.videos}
+            searchQuery={`${data.title} ${data.artist}`}
+          />
+        </>
+      )
+    }
 
-  <h2>Tab</h2>
-  <Content />
-  {/* TODO feedback */}
+    <h2>Tab</h2>
+    <div class="content">
+      <Content />
+    </div>
+  </main>
 </Layout>
 
 <style>
-  :global(h2) {
+  /* Applies styles to h2s on _this_ file/component only (doesn't reach child
+   * elements like the Content's content) and then to any h2s inside the
+   * .content element globally (i.e. _does_ reach child elements)
+   * https://docs.astro.build/en/guides/styling/#scoped-styles */
+  h2,
+  .content :global(h2) {
     @apply mb-4 mt-6 text-lg font-semibold;
   }
 
-  :global(p) {
+  .content :global(p) {
     @apply my-4;
     @apply dark:text-stone-300;
   }
 
-  :global(pre) {
+  .content :global(pre) {
     @apply -mx-5 my-4 overflow-auto border-y border-stone-100 bg-stone-50 px-5 py-4 text-sm text-stone-600;
     @apply md:mx-0 md:rounded-lg md:border;
     @apply dark:border-stone-800 dark:bg-stone-900 dark:text-stone-300;
   }
 
-  :global(:not(pre) > code) {
+  .content :global(:not(pre) > code) {
     @apply rounded border border-stone-100 bg-stone-50 px-1 text-sm text-stone-600;
     @apply dark:border-stone-700 dark:bg-stone-800 dark:text-stone-400;
   }
 
-  :global(.hljs.language-tab .hljs-section) {
+  .content :global(.hljs.language-tab .hljs-section) {
     @apply text-stone-900;
     @apply dark:text-stone-100;
   }
 
-  :global(.hljs.language-tab .hljs-string .hljs-dash) {
+  .content :global(.hljs.language-tab .hljs-string .hljs-dash) {
     @apply text-stone-300;
     @apply dark:text-stone-600;
   }
 
-  :global(table) {
+  .content :global(table) {
     @apply border-separate border-spacing-y-1 text-sm;
   }
 
-  :global(table th) {
+  .content :global(table th) {
     @apply p-0;
   }
 
-  :global(table td) {
+  .content :global(table td) {
     @apply p-0 pr-2 align-top first:text-end last:pr-0;
   }
 </style>
