add depth to badges

--- a/src/components/CapoBadge.astro
+++ b/src/components/CapoBadge.astro
@@ -9,5 +9,7 @@ const { class: className } = Astro.props
 ---
 
 <span
-  class={twMerge('h-2 w-2 rounded-full bg-orange-500 inline-block', className)}
-></span>
+  class={twMerge(
+    'h-2 w-2 rounded-sm bg-gradient-to-t from-orange-500 to-orange-400 inline-block',
+    className,
+  )}></span>
