--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -158,7 +158,7 @@ const tabGroups = toTabGroups(tabs)
                           </div>
                         )}
                         {tab.data.isNew && (
-                          <div class="rounded-full bg-blue-500 px-2 py-0.5 text-[0.625rem] font-semibold uppercase text-white">
+                          <div class="rounded-full bg-gradient-to-t from-blue-500 to-blue-400 px-2 py-0.5 text-[0.625rem] font-semibold uppercase text-white">
                             New
                           </div>
                         )}
