--- a/src/components/TunerBadge.astro
+++ b/src/components/TunerBadge.astro
@@ -9,5 +9,7 @@ const { class: className } = Astro.props
 ---
 
 <span
-  class={twMerge('h-2 w-2 rounded-full bg-purple-500 inline-block', className)}
-></span>
+  class={twMerge(
+    'h-2 w-2 rounded-full bg-gradient-to-t from-purple-500 to-purple-400 inline-block',
+    className,
+  )}></span>
