add sare are inset bottom padding

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title, description } = Astro.props
   </head>
   <body
     class={twMerge(
-      'mx-auto max-w-screen-md px-5 py-10 text-stone-800',
+      'mx-auto max-w-screen-md px-5 pt-10 pb-[calc(env(safe-area-inset-bottom)+theme(spacing.10))] pb-safe text-stone-800',
       'dark:bg-black dark:text-stone-100',
     )}
   >
