--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import UserIcon from '../components/icons/UserIcon.astro'
 import MusicNoteIcon from '../components/icons/MusicNoteIcon.astro'
 import CapoBadge from '../components/CapoBadge.astro'
 import TunerBadge from '../components/TunerBadge.astro'
+import Footer from '../components/Footer.astro'
 
 const tabs = await getCollection('tabs')
 const tabGroups = toTabGroups(tabs)
@@ -68,7 +69,7 @@ const tabGroups = toTabGroups(tabs)
                 </div>
                 <div
                   class={twMerge(
-                    'text-sm text-stone-500',
+                    'text-xs font-medium text-stone-500',
                     'dark:text-stone-400',
                   )}
                 >
@@ -184,4 +185,15 @@ const tabGroups = toTabGroups(tabs)
       })
     }
   </ol>
+
+  <p
+    class={twMerge(
+      'my-8 text-center text-xs font-medium text-stone-400',
+      'dark:text-stone-500',
+    )}
+  >
+    {tabs.length} tabs
+  </p>
+
+  <Footer />
 </Layout>
