--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,8 @@ const tabGroups = toTabGroups(tabs)
   <h1 class="mb-4 text-3xl font-semibold">Tino's Tabs</h1>
   <p class={twMerge('mb-8 max-w-md text-stone-500', 'dark:text-stone-400')}>
     An ever-growing collection of guitar tabs I’ve been putting together over
-    the years, with video references, lyrics, and other useful stuff.
+    the years, with video references, lyrics, and other useful stuff. Hope they
+    help!
   </p>
 
   <div class="mb-4 flex justify-end gap-4">
